--- a/menu_4.css
+++ b/menu_4.css
@@ -17,6 +17,7 @@
 
 body{
     font-family: Roboto;
+    margin: 0;
 }
 
 img{
@@ -32,17 +33,23 @@ body img{
 
 header{
     width: auto;
-    height: 2.5em;
+    height: 3.5em;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    padding: 0em 1em;
     align-items: center;
 }
 
 header img{
     height: 1.55em;
     width: 9em;
-    margin-top: 0.3em;
 }
+
+header a{
+    text-decoration: none;
+    color: black;
+}
+
 
 /* TITLE */
 .title_one {
@@ -52,7 +59,7 @@ header img{
     align-items: center;
     background-color: #f4f4f4;
     border-radius: 1em 1em 0em 0em;
-    padding: 0em 1em 0em 1em;
+    padding: 0em 1.5em 0em 1.5em;
 }
 
 h1{
@@ -71,7 +78,7 @@ h1{
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
-    padding: 0em 1em 1em 1em;
+    padding: 0em 2em 1em 2em;
     grid-gap: 1em;
     overflow: hidden;
 }
@@ -95,9 +102,9 @@ h1{
     border-radius: 1em;
     display: flex;
     justify-content: space-between;
-    padding: 0em 1em 0em 1em;
     box-shadow: 0.2em 0.2em 1em lightgrey;
     height: 4em;
+    overflow: hidden;
 }
 
 .card h3{
@@ -105,12 +112,34 @@ h1{
     font-family: Roboto-Medium;
     font-weight: normal;
     font-size: 1em;
+    padding: 0em 0em 0em 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .card p{
     font-family: Roboto-Thin;
     font-size: 0.8em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
+}
+
+.all_description{
+    display: flex;
+    justify-content: space-between !important;
+}
+
+.title_description{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.other{
+    padding: 0em 0em 0em 1.2em;
 }
 
 #text{
@@ -120,10 +149,46 @@ h1{
 .price{
     display: flex;
     align-items: flex-end;
+    margin-left: auto !important;
     font-family: Roboto-Medium !important;
 }
 
-/* KEYFRAMES */
+.check{
+    background-color: #99E2D0;
+    color: white;
+    margin-right: -5rem;
+    width: 5em;
+    margin-left: 1em;
+    transition: margin-right 1s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card:hover .check {
+    margin-right: 0em;
+}
+
+.check i{
+    display: flex;
+}
+
+.card:hover .check i{
+    animation: spin ease-in-out 1s;
+}
+
+/* KEYFRAMES CHECK SPIN */
+@keyframes spin{
+    0%{
+        transform: rotate(-270deg);
+    }
+
+    100%{
+        transform: rotate(0deg);
+    }
+}
+
+/* KEYFRAMES SLIDE */
 @keyframes slides{  
     0%{
         transform: translateY(500px);
@@ -136,6 +201,7 @@ h1{
     }
 }
 
+/* ANIMATION SLIDE */
 .slide_one{
     animation: slides 2s;
     height: 4em;
@@ -196,14 +262,15 @@ h1{
     justify-content: center;
     font-family: Roboto-Medium;
     border: transparent;
+    transition: 1s;
 }
 
 .button:hover{
-    opacity: 0.9;
+    opacity: 0.85;
     box-shadow: 1px 1px 12px 1px #4F4F4F;
 }
 
-.button h2{
+.section_button h2{
     display: none;
 }
 /* FOOTER */
@@ -250,6 +317,10 @@ footer a:hover{
         height: 17em;
     }
 
+    footer{
+        padding: 0em 2em 2em 2em;
+    }
+
     footer .link{
         flex-direction: row;
         grid-column-gap: 3em;
@@ -264,7 +335,7 @@ footer a:hover{
 
 @media (min-width: 1024px) and (max-width: 2560px){
     header{
-        height: 3.5em;
+        height: 4.5em;
     }
 
     header img{
@@ -311,6 +382,10 @@ footer a:hover{
     .button{
         height: 3.9em;
         width: 12em;
+    }
+
+    footer{
+        padding: 0em 2em 2em 2em;
     }
 
     footer h2{
