--- a/home_page.css
+++ b/home_page.css
@@ -16,7 +16,7 @@
 /* BODY */
 
 body{
-    font-family: Roboto;
+    font-family: "Roboto", Arial;
     margin: 0px;
 }
 
@@ -130,13 +130,13 @@ header img{
     font-size: 1.3em;
     margin-bottom: -0.5em;
     width: 10em;
-    font-family: Roboto Medium;
+    font-family: "Roboto Medium", Arial;
     font-weight: normal;
 }
 
 .section_one p{
     font-size: 0.95em;
-    font-family: Roboto light;
+    font-family: "Roboto light", Arial;
 }
 
 /* BUTTON */
@@ -155,7 +155,7 @@ header img{
     justify-content: center;
     background: rgb(147,86,220);
     background: linear-gradient(352deg, rgba(147,86,220,1) 9%, rgba(147,86,220,1) 34%, rgba(255,121,218,1) 100%, rgba(255,121,218,1) 100%); 
-    font-family: Roboto-Medium;
+    font-family: "Roboto-Medium", Arial;
     transition: 1s;
 }
 
@@ -174,6 +174,7 @@ header img{
     flex-direction: column;
     grid-gap: 1.5em;
     padding: 0;
+    margin-left: 0.5em;
 }
 
 .section_two li{
@@ -185,11 +186,12 @@ header img{
     border-radius: 1em;
     height: 3.7em;
     width: 100%;
+    transition: 950ms;
 }
 
 .section_two li:hover{
     background-color: #ebd6ff;
-    transition: 1000ms;
+    box-shadow: 1px 1px 5px #4F4F4F
 }
 
 .section_two i{
@@ -197,8 +199,9 @@ header img{
 }
 
 .section_two p{
-    font-family: Roboto Medium;
-    font-size: 0.9em;
+    font-family: "Roboto Medium", Arial;
+    font-size: 0.85em;
+    margin-left: -0.7em;
 }
 
 .number{
@@ -278,19 +281,22 @@ header img{
 /* NEWS */
 
 .new{
+    position: absolute;
     background-color: #a2e0c8;
     color: #468a68;
-    height: 1.5em;
-    width: 4.1em;
+    height: 1.7em;
+    width: 4.3em;
     border-radius: 0.2em;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 65%;
+    margin-top: 3%;
 }
 
 .new p{
-    font-size: 0.8em;
-    font-family: Roboto Medium;
+    font-size: 0.8em !important;
+    font-family: "Roboto Medium", Arial;
 }
 
 /* FOOTER */
@@ -306,7 +312,7 @@ footer{
 }
 
 footer h2{
-    font-family: Shrikhand;
+    font-family: "Shrikhand", Arial;
     font-weight: normal;
     font-size: 1em;
 }
@@ -343,7 +349,12 @@ footer a:hover{
     }
 
     .card{
-        width: 14em;
+        width: 48.5%;
+    }
+
+    .new{
+        margin-left: 35%;
+        margin-top: 1.5%;
     }
 
     footer{
@@ -413,17 +424,13 @@ footer a:hover{
         flex-direction: row;
     }
 
-    .section_two li{
-        width: 30%;
-    }
-
     .all_card{
         flex-wrap: wrap;
         flex-direction: row;
     }
 
     .card{
-        width: 25%;
+        width: 49%;
     }
 
     .card img{
@@ -441,6 +448,13 @@ footer a:hover{
 
     .card i{
         font-size: 1.5em;
+    }
+
+    .new{
+        margin-left: 41%;
+        margin-top: 1%;
+        width: 6%;
+        height: 1.8em;
     }
 
     footer{
