P3 - Home page + all menu
Home page modification + creation of all menus

--- a/home_page.css
+++ b/home_page.css
@@ -278,6 +278,17 @@ header img{
     height: 3em;
 }
 
+.far{
+    font-size: 4em;
+    color: black;
+    transition: 1000ms;
+}
+
+.far:hover{
+    font-weight: bold;
+    color: #FF79DA;
+}
+
 /* NEWS */
 
 .new{
