--- a/menu.css
+++ b/menu.css
@@ -35,9 +35,11 @@ header{
     width: auto;
     height: 3.5em;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     padding: 0em 1em;
     align-items: center;
+    box-shadow: 1px 6px 16px 1px #000000;
+    overflow: visible;
 }
 
 header img{
@@ -172,6 +174,17 @@ h1{
     display: flex;
 }
 
+.far{
+    font-size: 4em;
+    color: black;
+    transition: 1000ms;
+}
+
+.far:hover{
+    font-weight: bold;
+    color: #FF79DA;
+}
+
 .card:hover .check i{
     animation: spin ease-in-out 1s;
 }
@@ -190,10 +203,20 @@ h1{
 /* KEYFRAMES SLIDE */
 @keyframes slides{  
     0%{
+        opacity: 0;
         transform: translateY(500px);
     }
 
+    50% {
+        opacity: 0.3;
+    }
+
+    75% {
+        opacity: 0.6;
+    }
+
     100%{
+        opacity: 1;
         transform: translateY(0);
     }
 }
