--- a/menu.css
+++ b/menu.css
@@ -50,6 +50,7 @@ header img{
 header a{
     text-decoration: none;
     color: black;
+    font-size: 1.3em;
 }
 
 /* TITLE */
@@ -159,13 +160,14 @@ h1{
 .check{
     background-color: #99E2D0;
     color: white;
-    margin-right: -3.7em;
-    width: 3.7em;
+    margin-right: -2.3em;
+    width: 2.3em;
     margin-left: 1em;
     transition: margin-right 1s;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 2em;
 }
 
 .card:hover .check {
@@ -291,7 +293,7 @@ h1{
 }
 
 .button:hover{
-    opacity: 0.85;
+    opacity: 0.78;
     box-shadow: 1px 1px 12px 1px #4F4F4F;
 }
 
@@ -366,6 +368,10 @@ footer a:hover{
     header img{
         height: 2.59em;
         width: 14.9em;
+    }
+
+    header a{
+        font-size: 1.8em;
     }
 
     .title_one h1{
